--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hello Electron React!</title>
+    <title>Subnet Mask Calculator - @tranphuquy19</title>
     <script>
       (() => {
         if (!process.env.START_HOT) {
