commit struct project

--- a/app/app.html
+++ b/app/app.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Subnet Mask Calculator - @tranphuquy19</title>
+    <link rel="stylesheet" href="./bootstrap.min.css" />
     <script>
       (() => {
         if (!process.env.START_HOT) {
@@ -15,6 +16,7 @@
       })();
     </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script>
