--- a/app/app.html
+++ b/app/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Subnet Mask Calculator - @tranphuquy19</title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
+    <link rel="stylesheet" href="./antd.css" />
     <script>
       (() => {
         if (!process.env.START_HOT) {
